# 6.5840-Distributed-Sys

Lab0_RPC/buttonrpc-master/: client  client.cpp  server  server.cpp
Lab0_gPRC/: Dockerfile  Setup
Lab0_gPRC/examples/: CMakeLists.txt
Lab0_gPRC/examples/proto/: hello.proto
Lab0_gPRC/examples/src/: client.cpp  server.cpp
Lab1_MapReduce/: CMakeLists.txt  README.md
Lab1_MapReduce/src/: master  master.cpp  master.hpp  worker  worker.cpp  worker.hpp
Lab1_MapReduce/tests/: mrsequential  test-mr.sh
Lab2_Raft/: CMakeLists.txt
Lab2_Raft/src/: config.cpp  config.hpp  helper.cpp  helper.hpp  persister.hpp  raft.cpp  raft.hpp
Lab2_Raft/src/rpc/: endpoint.hpp  labrpc.cpp  labrpc.hpp  service.hpp
Lab2_Raft/tests/: raft_tests.cpp
Lab3_Raft/: CMakeLists.txt  README.md
Lab3_Raft/src/: config.cpp  config.hpp  helper.cpp  helper.hpp  logger.hpp  persister.cpp  persister.hpp  raft.cpp  raft.hpp
Lab3_Raft/src/rpc/: labrpc.cpp  labrpc.hpp  server.hpp  service.hpp
Lab3_Raft/tests/: raft_tests.cpp
